[gd_scene load_steps=7 format=3 uid="uid://mvrac2x2bkyd"]

[ext_resource type="Script" path="res://Scripts/GUI/Journal/JournalMenu.gd" id="1_wwrsu"]
[ext_resource type="Texture2D" uid="uid://bp4ryai1epp2j" path="res://Assets/MichaelAssets/items.png" id="2_mbnie"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jioag"]
atlas = ExtResource("2_mbnie")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jsomu"]
texture = SubResource("AtlasTexture_jioag")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_cy4du"]
atlas = ExtResource("2_mbnie")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hkvj5"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
texture = SubResource("AtlasTexture_cy4du")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0
expand_margin_left = 1.0
expand_margin_right = 1.0

[node name="JournalMenu" type="CanvasLayer"]
visible = false
script = ExtResource("1_wwrsu")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.243137, 0.243137, 0.243137, 0.698039)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = 10.0
offset_right = 43.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Journal"

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionsContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="ButtonGoals" type="Button" parent="Control/MarginContainer/VBoxContainer/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_jsomu")
text = "Goals"

[node name="ButtonQuests" type="Button" parent="Control/MarginContainer/VBoxContainer/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_jsomu")
text = "Quests"

[node name="ButtonTools" type="Button" parent="Control/MarginContainer/VBoxContainer/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_jsomu")
text = "Tools"

[node name="ButtonEnemies" type="Button" parent="Control/MarginContainer/VBoxContainer/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_jsomu")
text = "Enemies"

[node name="ButtonFactions" type="Button" parent="Control/MarginContainer/VBoxContainer/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_jsomu")
text = "Factions"

[node name="ButtonLocations" type="Button" parent="Control/MarginContainer/VBoxContainer/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_jsomu")
text = "Locations"

[node name="ButtonLore" type="Button" parent="Control/MarginContainer/VBoxContainer/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_jsomu")
text = "Lore"

[node name="HSplitContainer" type="HSplitContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
dragger_visibility = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="TopicListContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="Control/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hkvj5")

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HSplitContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="DetailsContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HSplitContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DetailTitleLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HSplitContainer/Panel/MarginContainer/DetailsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Detail Title"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/HSplitContainer/Panel/MarginContainer/DetailsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainerOverview" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer/HSplitContainer/Panel/MarginContainer/DetailsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="OverviewDescriptionLabel" type="RichTextLabel" parent="Control/MarginContainer/VBoxContainer/HSplitContainer/Panel/MarginContainer/DetailsContainer/HBoxContainer/ScrollContainerOverview"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Description"
fit_content = true

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer/HSplitContainer/Panel/MarginContainer/DetailsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="EntryListContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HSplitContainer/Panel/MarginContainer/DetailsContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
